@startuml
skinparam classAttributeIconSize 0

class Usuario {
  -id: int
  -nome: String
  -email: String
  -senha: String
  -bloqueado: boolean
  +login(): boolean
  +logout(): void
}
class Aluno {
  -limiteEmprestimos: int = 5
}
class Bibliotecario
class Administrador {
  +gerarRelatorio(): Report
  +bloquearUsuario(usuario): void
}
Usuario <|-- Aluno
Usuario <|-- Bibliotecario
Usuario <|-- Administrador

class Livro {
  -id: int
  -titulo: String
  -autor: String
  -categoria: String
  -estado: EstadoLivro
  +atualizarEstado(e: EstadoLivro)
}

class Emprestimo {
  -id: int
  -dataEmprestimo: Date
  -dataPrevistaDevolucao: Date
  -dataDevolucao: Date
  -renovacoes: int
  +renovar(): boolean
}

class Reserva {
  -id: int
  -dataReserva: Date
  -notificado: boolean
  +notificarDisponibilidade(): void
}

class Multa {
  -valorPorDia: float = 2.0
  +calcular(valorAtrasoDias: int): float
}

class Notificacao {
  -tipo: String
  -mensagem: String
  -dataEnvio: Date
  +enviar(): void
}

class AuthService {
  +autenticar(email, senha): Usuario
}

Usuario "1" --> "*" Emprestimo
Usuario "1" --> "*" Reserva
Reserva "*" --> "1" Livro
Emprestimo "*" --> "1" Livro
Emprestimo "1" --> "1" Usuario
Reserva "1" --> "1" Usuario
Emprestimo o-- Multa : usa
Reserva o-- Notificacao : gera
AuthService ..> Usuario : autentica
Livro ..> Emprestimo : mudaEstado
@enduml